# RustForKMP

./: Cargo.toml  README.md  build.gradle.kts  settings.gradle.kts
build-logic/gradle-plugin/src/main/kotlin/io/gitlab/trixnity/gradle/cargo/: CargoPlugin.kt
build-logic/gradle-plugin/src/main/kotlin/io/gitlab/trixnity/gradle/cargo/dsl/: CargoExtension.kt  DefaultCargoBuildVariant.kt
build-logic/gradle-plugin/src/main/kotlin/io/gitlab/trixnity/gradle/cargo/tasks/: CargoTask.kt
composeApp/: build.gradle.kts
composeApp/src/androidMain/kotlin/com/fine/samples/rustforkmp/: AP.android.kt  MainActivity.kt  Platform.android.kt
composeApp/src/androidMain/res/values/: strings.xml
composeApp/src/commonMain/kotlin/com/fine/samples/rustforkmp/: AP.kt  App.kt  Greeting.kt  Platform.kt  RootContent.kt
composeApp/src/desktopMain/kotlin/com/fine/samples/rustforkmp/: AP.jvm.kt  Platform.jvm.kt  main.kt
core/arithmetic-procmacro/: Cargo.toml  build.gradle.kts  uniffi.toml
core/arithmetic-procmacro/src/commonTest/kotlin/: ArithmeticTest.kt
gradle/: libs.versions.toml
