[workspace]
members = [
    "bindgen",

    "core/arithmetic-procmacro"
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
camino = "1.1.1"
lazy_static = "1.4"
once_cell = "1.18"
thiserror = "1"
tokio = "1"
uniffi = "=0.28.0"
uniffi_bindgen = "=0.28.0"
uniffi_macros = "=0.28.0"
uniffi_meta = "=0.28.0"
url = "2.2"